--- a/index.html
+++ b/index.html
@@ -12,10 +12,43 @@
 
 <body class=" bg-background lg:overflow-x-hidden lg:overflow-y-hidden">
 
+    <div data-dial-init class="fixed right-6 bottom-6 group">
+        <div id="speed-dial-menu-default" class="flex flex-col items-center hidden mb-4 space-y-2">
+            <button type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="left" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-yellow-500 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+                <a href="tel:+9809387034942"><i class="fa-mobile fa fa-2xl"></i></a>
+                <span class="sr-only">Call</span>
+            </button>
+            <div id="tooltip-print" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                Call
+                <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
+            <button type="button" data-tooltip-target="tooltip-download" data-tooltip-placement="left" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white  hover:bg-green-300 rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400  dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+                <a href="https://wa.me/9809387034942"><i class="fa fa-whatsapp fa-2xl"></i></a>
+                <span class="sr-only">Whatsapp</span>
+            </button>
+            <div id="tooltip-download" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                Whatsapp
+                <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
+            <button type="button" data-tooltip-target="tooltip-copy" data-tooltip-placement="left" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 dark:hover:text-white shadow-sm dark:text-gray-400 hover:bg-gray-50 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+                <a href="mailto:shayanhosseinzadeh1@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+                <span class="sr-only">Send Email</span>
+            </button>
+            <div id="tooltip-copy" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+             Send Email
+                <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
+        </div>
+        <button type="button" data-dial-toggle="speed-dial-menu-default" aria-controls="speed-dial-menu-default" aria-expanded="false" class="flex items-center justify-center text-white bg-blue-700 rounded-full w-14 h-14 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800">
+            <i class="fa fa-phone fa-2x"></i>
+            <span class="sr-only">Open actions menu</span>
+        </button>
+    </div>
+    
     <aside
         class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2 md:max-w-full">
-        <div>
-            <img class="rounded-full max-w-xs lg:w-1/2 lg:mx-auto" src="/public/img/logojpeg.jpeg" alt="">
+        <div class="lg:w-5/6">
+            <img class="rounded-full max-w-sm w-5/6 mx-auto  lg:w-1/2 lg:mx-auto" src="/public/img/IMG_8125.jpg" alt="">
         </div>
         <div class="inline-flex space-x-5 py-5">
             <a class="transform duration-100 hover:scale-125 animate-pulse antialiased" href="https://www.instagram.com/shayan_ho65/">
@@ -35,7 +68,7 @@
             <h3>Python Developer</h3>
             <h3>Front-end Developer</h3>
         </div>
-        <div class="pt-5 pb-10 flex flex-col text-lg">
+        <div class="pt-5 pb-5 flex flex-col text-lg">
             <div class="flex space-x-40">
                 <h4>Residence:</h4>
                 <span class=" text-yellow-200">Iran</span>
@@ -44,11 +77,12 @@
                 <h4>City:</h4>
                 <span class="ml-20 text-yellow-200">Tehran</span>
             </div>
-            <div class="flex space-x-40 justify-between">
+            <div class="flex space-x-40 justify-between ">
                 <h4>Age:</h4>
                 <span class="text-yellow-200">21</span>
             </div>
         </div>
+
         <hr class="bg-black w-full p-2">
         <div class="flex flex-col w-full p-5 pt-1">
             <span class="text-blue-400 font-bold text-center p-2 text-xl">HTML</span>
