--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/public/styless.css">
+    <link rel="shortcut icon" href="/public/icons/favicon.png" type="image/x-icon">
     <title>Shayan Hosseinzadeh</title>
 </head>
 
@@ -81,6 +82,45 @@
                 <h4>Age:</h4>
                 <span class="text-yellow-200">21</span>
             </div>
+            <!-- cv button mobile  -->
+            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
+            class="= mt-6 mb-2  text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            type="button">
+            Download CV
+        </button>
+        <!-- resunme modal  -->
+        <div id="popup-modal" tabindex="-1"
+                class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+                <div class="relative w-full max-w-md max-h-full">
+                    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                        <button type="button"
+                            class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                            data-modal-hide="popup-modal">
+                            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 14 14">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                        <div class="p-6 text-center">
+                            <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+                            <h3 class="mb-5 text-lg font-bold text-black dark:text-gray-400">Please Select the language</h3>
+                        <a href="/Resumes/Persian.pdf"><button data-modal-hide="popup-modal" type="button"
+                                class="text-white bg-green-600 hover:bg-black focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-lg inline-flex items-center px-10 py-4 text-center mr-2">
+                                Persian
+                            </button></a>
+                            <a href="/Resumes/English.pdf"><button data-modal-hide="popup-modal" type="button"
+                                class=" bg-red-500 hover:bg-black focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-lg font-bold px-10 py-4 hover:text-white focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 ">
+                                English</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <hr class="bg-black w-full p-2">
@@ -124,11 +164,13 @@
                 </h2>
             </div>
             <!-- Resume Modal  -->
-            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-                class="absolute  bottom-3 left-4 text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-10 py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                type="button">
-                Download CV
-            </button>
+            <div class="visible">
+                <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
+                    class="absolute  bottom-3 left-4 text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-10 py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                    type="button">
+                    Download CV
+                </button>
+            </div>
             <div id="popup-modal" tabindex="-1"
                 class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
                 <div class="relative w-full max-w-md max-h-full">
@@ -162,6 +204,8 @@
                 </div>
             </div>
 
+        </div>
+       
         </div>
         <!-- icons -->
         <div
