--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body class=" bg-background lg:overflow-x-hidden lg:overflow-y-hidden">
 
-    <div data-dial-init class="fixed right-6 bottom-6 group">
+    <div data-dial-init class="fixed right-6 bottom-6 group z-20" >
         <div id="speed-dial-menu-default" class="flex flex-col items-center hidden mb-4 space-y-2">
-            <button type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="left" class="flex justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-yellow-500 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
+            <button type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="left" class="flex z-20  justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-yellow-500 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
                 <a href="tel:+9809387034942"><i class="fa-mobile fa fa-2xl"></i></a>
-                <span class="sr-only">Call</span>
+                <span class="sr-only z-10">Call</span>
             </button>
-            <div id="tooltip-print" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+            <div id="tooltip-print" role="tooltip" class="absolute z-20 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
                 Call
                 <div class="tooltip-arrow" data-popper-arrow></div>
             </div>
@@ -85,7 +85,7 @@
             </div>
             <!-- cv button mobile  -->
             <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-            class="= lg:hidden mt-6 mb-2  text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            class="= lg:hidden  z-1 mt-6 mb-2  text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
             type="button">
             Download CV
         </button>
